# semantic-image-search

./: .gitignore  README.md  pyproject.toml
src/aws_bedrock_image_search/: config.py  helper.py  logger.py  main.py
src/aws_clients/: bedrock_client.py  s3_client.py  sts_client.py
src/supabase_clients/: vecs_client.py
